meshcentral/base/web/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: web
spec:
  entryPoints:
  - websecure
  routes:
    - match: PathPrefix(`/meshcentral`)
      kind: Rule
      services:
      - name: meshcentral-web
        port: 443
